--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -35,14 +35,14 @@ steps:
         local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-\?.\?*\+[0-9]\?*\+$" | head -1)
         echo "$VERSION"
     }
-    check_preview_tag ( VERSION ) {
+    check_preview_tag () {
         local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
         while [ ! "$TAG_REFS" ]
         do
             sleep 1
         done
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$" | head -1)
-        if ( "$PREVIEW_VERSION" = "$VERSION")
+        if ( "$PREVIEW_VERSION" = "$1")
         then
             return true
         else
@@ -50,7 +50,7 @@ steps:
         fi
     }
     
-    check__bad_preview_tag ( VERSION ) {
+    check__bad_preview_tag () {
         local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
         while [ ! "$TAG_REFS" ]
         do
@@ -58,7 +58,7 @@ steps:
         done
 
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$" | head -1)
-        if ( "$PREVIEW_VERSION" = "$VERSION")
+        if ( "$PREVIEW_VERSION" = "$1")
         then
             return true
         else
@@ -66,7 +66,7 @@ steps:
         fi
     }
 
-    check_version_tag ( VERSION ) {
+    check_version_tag () {
         local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
         while [ ! "$TAG_REFS" ]
         do
@@ -74,7 +74,7 @@ steps:
         done
         
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
-        if ( "$PREVIEW_VERSION" = "$VERSION")
+        if ( "$PREVIEW_VERSION" = "$1")
         then
             return true
         else
@@ -129,7 +129,7 @@ steps:
                     echo "Preview tag created from last version."
                 fi
             else
-                if [ check_version_tag ( $VERSION ) = true ] && [ "$MAJOR_LABEL" != "major" ]
+                if [ check_version_tag "$VERSION" = true ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Pre-release versioning... incrementing preview number"
                     preview_number=`echo $VERSION | awk -F "." '{print $4}'`
@@ -141,7 +141,7 @@ steps:
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
 
-                elif [ check__bad_preview_tag ( $VERSION ) = true ] && [ "$MAJOR_LABEL" != "major" ]
+                elif [ check__bad_preview_tag "$VERSION" = true ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
                     - preview_number="1"
@@ -151,7 +151,7 @@ steps:
                     PATCH=`echo $VERSION | awk -F "." '{print $3}'`
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                elif [ check_version_tag ( $VERSION ) = true ] || [ check__bad_preview_tag ( $VERSION ) = true ] && [ "$MAJOR_LABEL" = "major" ]
+                elif [ check_version_tag "$VERSION" = true ] || [ check__bad_preview_tag "$VERSION" = true ] && [ "$MAJOR_LABEL" = "major" ]
                 then
                     NEW_VERSION=`echo $VERSION | awk -F "-" '{print $1}'`
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
@@ -171,7 +171,7 @@ steps:
             VERSION=$(get_latest_version_tag)
             echo "Version is = $VERSION"
             NEW_PROJECT=false
-            if [ check_version_tag ( $VERSION ) = true ]
+            if [ check_version_tag "$VERSION" = true ]
             then
                 if [ ! "$VERSION" ]
                 then
