--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -124,7 +124,13 @@ steps:
                 VERSION=$(get_latest_version_tag)
                 if [ "$VERSION" != "" ]
                 then
-                    NEW_VERSION="${$VERSION}-preview.1"
+                    MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+                    MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+                    PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+                    MAJOR=$((MAJOR+1))
+                    MINOR="0"
+                    PATCH="0"
+                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-preview.1"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
                     echo "Preview tag created from last version."
                 fi
