--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -44,9 +44,9 @@ steps:
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$" | head -1)
         if ( "$PREVIEW_VERSION" = "$1")
         then
-            return true
+            return 1
         else
-            return false
+            return 0
         fi
     }
     
@@ -60,9 +60,9 @@ steps:
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$" | head -1)
         if ( "$PREVIEW_VERSION" = "$1")
         then
-            return true
+            return 1
         else
-            return false
+            return 0
         fi
     }
 
@@ -76,9 +76,9 @@ steps:
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
         if ( "$PREVIEW_VERSION" = "$1")
         then
-            return true
+            return 1
         else
-            return false
+            return 0
         fi
     }
 
@@ -135,7 +135,7 @@ steps:
                     echo "Preview tag created from last version."
                 fi
             else
-                if [ check_version_tag "$VERSION" = true ] && [ "$MAJOR_LABEL" != "major" ]
+                if [ check_version_tag "$VERSION" -eq 1 ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Pre-release versioning... incrementing preview number"
                     preview_number=`echo $VERSION | awk -F "." '{print $4}'`
@@ -147,7 +147,7 @@ steps:
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
 
-                elif [ check__bad_preview_tag "$VERSION" = true ] && [ "$MAJOR_LABEL" != "major" ]
+                elif [ check__bad_preview_tag "$VERSION" -eq 1 ] && [ "$MAJOR_LABEL" != "major" ]
                 then
                     echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
                     - preview_number="1"
@@ -157,7 +157,7 @@ steps:
                     PATCH=`echo $VERSION | awk -F "." '{print $3}'`
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                elif [ check_version_tag "$VERSION" = true ] || [ check__bad_preview_tag "$VERSION" = true ] && [ "$MAJOR_LABEL" = "major" ]
+                elif [ check_version_tag "$VERSION" -eq 1 ] || [ check__bad_preview_tag "$VERSION" -eq 1 ] && [ "$MAJOR_LABEL" = "major" ]
                 then
                     NEW_VERSION=`echo $VERSION | awk -F "-" '{print $1}'`
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
@@ -174,7 +174,7 @@ steps:
             VERSION=$(get_latest_version_tag)
             echo "Version is = $VERSION"
             NEW_PROJECT=false
-            if [  $(check_version_tag "$VERSION" ) = true ]
+            if [  $(check_version_tag "$VERSION" ) -eq 1 ]
             then
                 if [ ! "$VERSION" ]
                 then
