--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -42,7 +42,7 @@ steps:
             sleep 1
         done
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-?.\+\.[0-9]\+$" | head -1)
-        if ( "$PREVIEW_VERSION" = "$1")
+        if [ "$PREVIEW_VERSION" = "$1" ]
         then
             echo "true"
         else
@@ -58,7 +58,7 @@ steps:
         done
 
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-?[a-zA-Z0-9]\+$" | head -1)
-        if ( "$PREVIEW_VERSION" = "$1")
+        if [ "$PREVIEW_VERSION" = "$1" ]
         then
             echo "true"
         else
@@ -74,7 +74,7 @@ steps:
         done
         
         local PREVIEW_VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
-        if ( "$PREVIEW_VERSION" = "$1")
+        if [ "$PREVIEW_VERSION" = "$1" ]
         then
             echo "true"
         else
