--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -167,69 +167,56 @@ steps:
                 fi
             fi
         
-        elif [ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]
+        elif [[ "$MAJOR_LABEL" = "major" ] || [ "$MINOR_LABEL" = "minor" ] || [ "$PATCH_LABEL" = "patch" ] || [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ]] && [ "$PREVIEW_LABEL" != "preview" ]
         then
             echo "Getting version tag..."
             
             VERSION=$(get_latest_version_tag)
             echo "Version is = $VERSION"
             NEW_PROJECT=false
-            if [  $(check_version_tag "$VERSION" ) = "true" ]
+            if [ ! "$VERSION" ]
             then
-                if [ ! "$VERSION" ]
-                then
-                    NEW_PROJECT=true
-                    VERSION=1.0.0
-                    echo No version tag found. Setting version to "$VERSION"
-                fi
-            
-                MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-                MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-                PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-                
-                if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
-                then
-                    echo "New major release"
-                    MAJOR=$((MAJOR+1))
-                    MINOR="0"
-                    PATCH="0"
-                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
-
-                elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ] && [ "$MAJOR_LABEL" != "major" ]
-                then
-                    echo "New minor release"
-                    MINOR=$((MINOR+1))
-                    PATCH="0"
-                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
-
-                elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
-                then
-                    echo "New patch release"
-                    PATCH=$((PATCH+1))
-                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
-
-                
-                elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
-                then
-                    echo "New patch release, dependency has been upgraded."
-                    PATCH=$((PATCH+1))
-                fi
-
-                if  [ "$PREVIEW_LABEL" = "preview" ] && [ "$PATCH_LABEL" != "patch" ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
-                then
-                    echo "Label is [preview] but version tag is not a pre release. Please use [patch] [minor] or [major] label."
-                    echo "##vso[task.setvariable variable=Version;isOutput=true]empty" 
-                fi
-                NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-                echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
-                echo Previous version "$VERSION"
-                echo New version "$NEW_VERSION"
-
-            
-            else
-                echoerr "INVALID VERSION $VERSION ! Please use SymVer syntax for version tags, or let it empty."
-                echo "##vso[task.setvariable variable=Version;isOutput=true]empty"
+                NEW_PROJECT=true
+                VERSION=1.0.0
+                echo No version tag found. Setting version to "$VERSION"
             fi
+
+            MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+            MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+            PATCH=`echo $VERSION | awk -F "." '{print $3}'`
+
+            if [ "$MAJOR_LABEL" = "major" ] && [ "$NEW_PROJECT" = false ]
+            then
+                echo "New major release"
+                MAJOR=$((MAJOR+1))
+                MINOR="0"
+                PATCH="0"
+                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
+
+            elif [ "$MINOR_LABEL" = "minor" ] && [ "$NEW_PROJECT" = false ] && [ "$MAJOR_LABEL" != "major" ]
+            then
+                echo "New minor release"
+                MINOR=$((MINOR+1))
+                PATCH="0"
+                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
+
+            elif [ "$PATCH_LABEL" = "patch" ] && [ "$NEW_PROJECT" = false ] && [ "$MINOR_LABEL" != "minor" ] && [ "$MAJOR_LABEL" != "major" ]
+            then
+                echo "New patch release"
+                PATCH=$((PATCH+1))
+                echo "##vso[task.setvariable variable=IsMajor;isOutput=true]false"
+
+
+            elif [ "$COMMIT_MESSAGE" = "$CASCADING_BUILD_MESSAGE" ] && [ "$NEW_PROJECT" = false ]
+            then
+                echo "New patch release, dependency has been upgraded."
+                PATCH=$((PATCH+1))
+            fi
+            
+            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+            echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+            echo Previous version "$VERSION"
+            echo New version "$NEW_VERSION"
 
         else
             echoerr No label triggering new version
